# surrogate-index

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/surrogate_index/: __about__.py  __init__.py  eif.py  learners.py  preprocess.py
tests/: test_smoke.py
