[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surrogate-index"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Kideok Kwon", email = "kideokk16@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Kideok Kwon/surrogate-index#readme"
Issues = "https://github.com/Kideok Kwon/surrogate-index/issues"
Source = "https://github.com/Kideok Kwon/surrogate-index"

[tool.hatch.version]
path = "src/surrogate_index/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/surrogate_index tests}"

[tool.coverage.run]
source_pkgs = ["surrogate_index", "tests"]
branch = true
parallel = true
omit = [
  "src/surrogate_index/__about__.py",
]

[tool.coverage.paths]
surrogate_index = ["src/surrogate_index", "*/surrogate-index/src/surrogate_index"]
tests = ["tests", "*/surrogate-index/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
