[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surrogate-index"
dynamic = ["version"]
description = 'Surrogate Index EIF estimation package. See: https://github.com/kideokkwon/surrogate-index'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Kideok Kwon", email = "kideokk16@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/kideokkwon/surrogate-index#readme"
Issues = "https://github.com/kideokkwon/surrogate-index/issues"
Source = "https://github.com/kideokkwon/surrogate-index"

[tool.hatch.version]
path = "src/surrogate_index/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/surrogate_index tests}"

[tool.coverage.run]
source_pkgs = ["surrogate_index", "tests"]
branch = true
parallel = true
omit = [
  "src/surrogate_index/__about__.py",
]

[tool.coverage.paths]
surrogate_index = ["src/surrogate_index", "*/surrogate-index/src/surrogate_index"]
tests = ["tests", "*/surrogate-index/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.default]                # ← define the env
dependencies = [                         # dev tools installed *into* the env
  "ruff>=0.4",
  "black>=24.3",
  "mypy>=1.9",
  "pandas-stubs>=2.1.1.230316",
  "pytest>=8.1.1",
  "pandas>=2.0"  
]

[tool.hatch.envs.default.scripts]        # ← script lives *inside* the env
lint = [
  "ruff check .",
  "black --check .",
  "mypy --strict src"
]
test = "pytest tests"

[project.optional-dependencies]
dev = ["ruff>=0.4", "black>=24.3", "mypy>=1.9"]
ml = [
  "xgboost>=2.0",       # gradient boosted trees for nuisance models
  "scikit-learn>=1.4",  # for ColumnTransformer, KFold, OneHotEncoder
  "pandas>=2.2",
  "numpy>=1.26"
]